<resources>
    <string name="app_name">ChapterChallenge7</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iv_next">iv_next</string>
    <string name="iv_lp_image">iv_lp_image</string>
    <string name="iv_logo_2">iv_logo_2</string>
    <string name="iv_logo_1">iv_logo_1</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login1">LOGIN</string>
    <string name="Email">E-mail</string>
    <string name="masuk_disini">Masuk Disini</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="tidak_punya_akun">Tidak Punya Akun?</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="tv_versus">VS</string>
    <string name="tv_player_one_name">Player 1</string>
    <string name="tv_player_two_name">COM</string>
    <string name="masuk">Masuk</string>
    <string name="hasil_permainan">Hasil Permainan</string>
    <string name="main_lagi">Main Lagi</string>
    <string name="ubah_mode_pemain">Ubah Mode Pemain</string>
    <string name="kembali_ke_menu">Kembali Ke Menu</string>
    <string name="game_history">Game History</string>
    <string name="peringatan">PERINGATAN</string>
    <string name="delete_data_warning_text">Apakah anda yakin ingin menghapus data? (Data yang terhapus tidak dapat dikembalikan)</string>
</resources>