<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_brown"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="106dp"
        android:layout_height="21dp"
        android:layout_marginTop="63dp"
        android:text="@string/masuk_disini"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="271dp"
        android:padding="8dp"
        android:text="@string/nama"
        android:textColor="@color/white"
        android:fontFamily="@font/inika"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/et_login_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_login_email"
        android:layout_width="266dp"
        android:layout_height="47dp"
        android:layout_marginTop="156dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/btn_background2"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="271dp"
        android:padding="8dp"
        android:text="@string/kata_sandi"
        android:textColor="@color/white"
        android:fontFamily="@font/inika"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/et_login_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_login_password"
        android:layout_width="266dp"
        android:layout_height="47dp"
        android:layout_marginTop="240dp"
        android:inputType="textPassword"
        android:background="@drawable/btn_background2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_background1"
        android:text="Masuk"
        android:textAllCaps="false"
        android:fontFamily="@font/inika"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_login_password" />

    <TextView
        android:id="@+id/tv_tidak_punya_akun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/tidak_punya_akun"
        android:textColor="@color/white"
        android:fontFamily="@font/inika"
        android:textSize="14sp"
        android:layout_marginBottom="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar_disini"
        android:textColor="@color/light_gray"
        android:fontFamily="@font/inika"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_tidak_punya_akun"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>